Edit home and about us page

--- a/templates/about.twig
+++ b/templates/about.twig
@@ -13,13 +13,10 @@
             <div class="preloader-line"></div>
             <div class="preloader-content">
                 <div class="preloader-title-overflow">
-                    <p class="preloader-content-title is-1st">Site consult steel</p>
+                    <h3 class="preloader-content-title is-1st">{{preloader.preloaderTitle}}</h3>
                 </div>
                 <div class="preloader-title-overflow">
-                    <p class="preloader-content-title is-2nd">construction </p>
-                </div>
-                <div class="preloader-title-overflow">
-                    <p class="preloader-content-title is-3rd">Reliability. Integrity. Innivation</p>
+                    <p class="preloader-content-title is-3rd">{{preloader.preloaderSubtitle}}</p>
                 </div>
             </div>
         </div>
@@ -215,7 +212,7 @@
                     </div>
                 </div>
             </section>
-            
+
             <!--////////////////////////////////cta////////////////////////////////-->
             <section class="section cta-content-1 wf-section">
                 <div class="container is-cta-container">
