--- a/templates/projects/entry.twig
+++ b/templates/projects/entry.twig
@@ -1,7 +1,8 @@
 {% extends "layout/main.twig" %}
 {% block content%}
 
-<body
+<body>
+
     <div id="web" >
        
       
@@ -29,7 +30,7 @@
                             <div class="image-animation-trigger _3d-for-image">
                                 <div class="animation-color-bg is-white-color"></div><img
                                     src="{{projectPhoto.url}}"
-                                    loading="lazy" alt="Modern loft renovation" sizes="100vw"
+                                    loading="lazy" alt="{{entry.projectName}}" sizes="100vw"
                                     {# srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495-p-1600.jpeg 1600w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495.jpg 1920w" #}
                                     class="cover-image" />
                             </div>
@@ -46,7 +47,7 @@
                             <div class="explore-background"></div>
                         </a></div>
                     <div id="w-node-_29c26390-1a0c-8e4a-8b8f-ee9c95d08087-7f92a080" class="grid-button-item"><a
-                            href="/contact-1" class="explore-link-button is-inquiry w-inline-block">
+                            href="/contact" class="explore-link-button is-inquiry w-inline-block">
                             <p class="explore-text">Inquiry</p><img
                                 src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6255e4c6bc47f1efe042ac1c_north_east_white_24dp.svg"
                                 loading="lazy" alt="" class="explore-icon is-inquiry" />
