--- a/templates/index.twig
+++ b/templates/index.twig
@@ -12,13 +12,13 @@
             <div class="preloader-line"></div>
             <div class="preloader-content">
                 <div class="preloader-title-overflow">
-                    <p class="preloader-content-title is-1st">Site consult steel</p>
+                    <h3 class="preloader-content-title is-1st">{{preloader.preloaderTitle}}</h3>
                 </div>
-                <div class="preloader-title-overflow">
+                {# <div class="preloader-title-overflow">
                     <p class="preloader-content-title is-2nd">construction </p>
-                </div>
+                </div> #}
                 <div class="preloader-title-overflow">
-                    <p class="preloader-content-title is-3rd">Reliability. Integrity. Innivation</p>
+                    <p class="preloader-content-title is-3rd">{{preloader.preloaderSubtitle}}</p>
                 </div>
             </div>
         </div>
@@ -58,8 +58,8 @@
                         <div class="sticky-100vh-block">
                             <div class="hero-bg-color"></div>
                             <div class="hero-bg-gradient"></div>
-                            <div data-poster-url="https://assets.website-files.com/625295532800cfe2dd8d3dd2/62530bf395e36ce05679e8b9_pexels-kindel-media-7578545 (1)-poster-00001.jpg"
-                                data-video-urls="https://assets.website-files.com/625295532800cfe2dd8d3dd2/62530bf395e36ce05679e8b9_pexels-kindel-media-7578545 (1)-transcode.mp4,https://assets.website-files.com/625295532800cfe2dd8d3dd2/62530bf395e36ce05679e8b9_pexels-kindel-media-7578545 (1)-transcode.webm"
+                            <div data-poster-url="{{entry.introVideo}}"
+                                data-video-urls="{{entry.introVideo}}"
                                 data-autoplay="true" data-loop="true" data-wf-ignore="true"
                                 data-beta-bgvideo-upgrade="false"
                                 class="video-background w-background-video w-background-video-atom"><video
@@ -67,10 +67,7 @@
                                     style="background-image:url(&quot;https://assets.website-files.com/625295532800cfe2dd8d3dd2/62530bf395e36ce05679e8b9_pexels-kindel-media-7578545 (1)-poster-00001.jpg&quot;)"
                                     muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
                                     <source
-                                        src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/62530bf395e36ce05679e8b9_pexels-kindel-media-7578545 (1)-transcode.mp4"
-                                        data-wf-ignore="true" />
-                                    <source
-                                        src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/62530bf395e36ce05679e8b9_pexels-kindel-media-7578545 (1)-transcode.webm"
+                                        src="{{entry.introVideo}}"
                                         data-wf-ignore="true" />
                                 </video></div>
                         </div>
@@ -136,6 +133,8 @@
                             </div>
                             <div id="w-node-_7cbb90d0-b3bd-6698-545a-651a1a08c493-d68d3dd3" class="content-block-6">
                                 <div class="custom-list-1">
+                                 {% for valueProp in entry.valueProps.all() %}
+
                                     <div class="list-block">
                                         <div class="circle-in-list">
                                             <div class="circle-background"></div><img
@@ -143,63 +142,13 @@
                                                 loading="lazy" alt="" class="custom-list-icon" />
                                         </div>
                                         <div class="list-content">
-                                            <p class="list-title">Experienced team</p>
-                                            <p class="list-text">Duis cursus, mi quis viverra ornare, eros dolor
-                                                interdum nulla, ut commodo diam libero.</p>
+                                            <p class="list-title">{{valueProp.valueProptext}}</p>
+                                            <p class="list-text">{{valueProp.valuePropsubfield}}</p>
                                         </div>
                                         <div class="list-line"></div>
                                     </div>
-                                    <div class="list-block">
-                                        <div class="circle-in-list">
-                                            <div class="circle-background"></div><img
-                                                src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252bb412800cf41d28e2179_done_white_24dp.svg"
-                                                loading="lazy" alt="" class="custom-list-icon" />
-                                        </div>
-                                        <div class="list-content">
-                                            <p class="list-title">Certified employes</p>
-                                            <p class="list-text">Aenean faucibus nibh et justo cursus id rutrum lorem
-                                                imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-                                        </div>
-                                        <div class="list-line"></div>
-                                    </div>
-                                    <div class="list-block">
-                                        <div class="circle-in-list">
-                                            <div class="circle-background"></div><img
-                                                src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252bb412800cf41d28e2179_done_white_24dp.svg"
-                                                loading="lazy" alt="" class="custom-list-icon" />
-                                        </div>
-                                        <div class="list-content">
-                                            <p class="list-title">Trusted company</p>
-                                            <p class="list-text">Duis cursus, mi quis viverra ornare, eros dolor
-                                                interdum nulla, ut commodo diam libero.</p>
-                                        </div>
-                                        <div class="list-line"></div>
-                                    </div>
-                                    <div class="list-block">
-                                        <div class="circle-in-list">
-                                            <div class="circle-background"></div><img
-                                                src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252bb412800cf41d28e2179_done_white_24dp.svg"
-                                                loading="lazy" alt="" class="custom-list-icon" />
-                                        </div>
-                                        <div class="list-content">
-                                            <p class="list-title">In-house team</p>
-                                            <p class="list-text">Aenean faucibus nibh et justo cursus id rutrum lorem
-                                                imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-                                        </div>
-                                        <div class="list-line"></div>
-                                    </div>
-                                    <div class="list-block is-last">
-                                        <div class="circle-in-list"><img
-                                                src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252bb412800cf41d28e2179_done_white_24dp.svg"
-                                                loading="lazy" alt="" class="custom-list-icon" />
-                                            <div class="circle-background"></div>
-                                        </div>
-                                        <div class="list-content">
-                                            <p class="list-title">Guarantee of quality work</p>
-                                            <p class="list-text">Duis cursus, mi quis viverra ornare, eros dolor
-                                                interdum nulla, ut commodo diam libero.</p>
-                                        </div>
-                                    </div>
+                                 {% endfor %}
+                                    
                                 </div>
                             </div>
                         </div>
@@ -328,7 +277,7 @@
                             <p class="uppercase-title-border">Projects</p>
                             <h2 class="heading is-content-title-5">We realized <span class="opacity-70">more than</span>
                                 100+ constructions</h2>
-                            <div class="moving-button-trigger"><a href="/projects-1" class="main-button w-inline-block">
+                            <div class="moving-button-trigger"><a href="/projects" class="main-button w-inline-block">
                                     <div class="button-inner">
                                         <p class="button-title">All projects</p><img
                                             src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
@@ -556,7 +505,7 @@
                                 <h2 data-w-id="c4442ee1-5837-2ede-b004-647ecf03e422" class="heading is-cta-title-1">
                                     Reach out today and start this amazing journey with us</h2>
                                 <div class="two-buttons-1">
-                                    <div class="button-overlap-6"><a href="/contact-1"
+                                    <div class="button-overlap-6"><a href="/contact"
                                             class="main-button w-inline-block">
                                             <div class="button-inner">
                                                 <p class="button-title">Contact</p><img
