Create services page

--- a/templates/includes/_nav.twig
+++ b/templates/includes/_nav.twig
@@ -36,7 +36,13 @@
                         <p class="menu-link-title">Projects</p>
                     </a> 
                 </div>
-               
+            </div>
+              <div >
+                <div class="nav-link is-dropdown w-dropdown-toggle">
+                    <a href="/services" >
+                        <p class="menu-link-title">Services</p>
+                    </a> 
+                </div>
             </div>
         </nav>
       <div id="w-node-e4da4c37-ee58-167a-cbd7-451e68993abe-68993a17" class="menu-button-grid w-nav-button">
