--- a/templates/includes/_nav.twig
+++ b/templates/includes/_nav.twig
@@ -15,7 +15,7 @@
         <nav role="navigation" id="w-node-e4da4c37-ee58-167a-cbd7-451e68993a25-68993a17"
             class="nav-menu-grid w-nav-menu">
              <div   >
-                <div class="nav-link >
+                <div class="nav-link" >
                     <a href="/"> <p class="menu-link-title">Home</p></a>
                     
                 </div>
