Edit projects page

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -167,7 +167,7 @@
                                 <span class="opacity-70">Aim to details.</span>
                             </h3>
                             <div class="moving-button-trigger">
-                                <a href="/services-1" class="main-button w-inline-block">
+                                <a href="/services" class="main-button w-inline-block">
                                     <div class="button-inner">
                                         <p class="button-title">About services</p>
                                         <img src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
