--- a/templates/services/index.twig
+++ b/templates/services/index.twig
@@ -63,9 +63,9 @@
                                     <div class="moving-link-circle"></div>
                                 </div>
                                 <h2 data-w-id="a5f2a85c-d090-fa5c-295b-6564485b3f08" style="opacity:0"
-                                    class="solution-cms-2-title">{{service.title}}</h2>
+                                    class="solution-cms-2-title">{{service.serviceTitle}}</h2>
                                 <p data-w-id="45fd1168-2d7d-b0bb-a702-b290824e449b" style="opacity:0"
-                                    class="solution-cms-3-desciption">{{service.serviceDescription}}</p><a href="/services/{{service.title}}"
+                                    class="solution-cms-3-desciption">{{service.serviceDescription}}</p><a href="/services/{{service.slug}}"
                                     class="solution-button w-inline-block">
                                     <p>Learn More</p><img
                                         src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
