--- a/templates/services/index.twig
+++ b/templates/services/index.twig
@@ -78,7 +78,7 @@
                                     <div class="image-animation-trigger _3d-for-image">
                                         <div class="animation-color-bg"></div><img
                                             src="{{photo.url}}"
-                                            loading="lazy" alt="Construction"
+                                            loading="lazy" alt="{{service.serviceTitle}}"
                                             sizes="(max-width: 479px) 78vw, (max-width: 767px) 60vw, (max-width: 991px) 28vw, 31vw"
                                             {# srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/626701d4b43dd05c344c6ca7_pexels-tima-miroshnichenko-6615028-p-500.jpeg 500w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/626701d4b43dd05c344c6ca7_pexels-tima-miroshnichenko-6615028-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/626701d4b43dd05c344c6ca7_pexels-tima-miroshnichenko-6615028-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/626701d4b43dd05c344c6ca7_pexels-tima-miroshnichenko-6615028.jpg 1920w" #}
                                             class="cover-image" />
