--- a/templates/projects/entry.twig
+++ b/templates/projects/entry.twig
@@ -4,7 +4,7 @@
 <body>
 
     <div id="web" >
-       
+           {% set photo = entry.coverImage.one() %}
       
         <div class="global-styles w-embed"></div>
          <div class="second-navbar"><a href="#" class="aside-contact-button w-inline-block"><img
@@ -16,7 +16,7 @@
             </a><a href="#web" class="right-menu-button is-goes-up w-inline-block"><img
                     src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/62587db8e356a3457738948a_expand_less_white_24dp.svg"
                     loading="lazy" alt="" class="goes-up-icon" /></a></div>
-                    {% set projectPhoto = entry.coverimage.one() %}
+                
         <main class="main">
             <section class="section wf-section">
                 <div class="hero-project-cms">
@@ -29,7 +29,7 @@
                         <div class="_3d-block">
                             <div class="image-animation-trigger _3d-for-image">
                                 <div class="animation-color-bg is-white-color"></div><img
-                                    src="{{projectPhoto.url}}"
+                                    src="{{photo.url}}"
                                     loading="lazy" alt="{{entry.projectName}}" sizes="100vw"
                                     {# srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495-p-1600.jpeg 1600w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495.jpg 1920w" #}
                                     class="cover-image" />
@@ -184,12 +184,13 @@
                             <p data-w-id="2a49c9e0-39fc-a59b-5140-0e71da139e72" style="opacity:1"
                                 class="content-subtitle-4">You may also like</p>
                         </div>
-                           {%set  projects = craft.entries.section('projects').limit(4) %}
-                               
+                           {% set  projects = craft.entries.section('projects').limit(4) %}
+                              
                         <div class="projects-with-lines">
                             <div class="projects-cms w-dyn-list">
                                 <div role="list" class="project-cms-flex w-dyn-items">
                                   {% for project in projects %}
+                                  {% set galleryphoto = project.coverImage.one() %} 
                                     <div role="listitem" class="project-cms-item-2 w-dyn-item">
                                         <div class="project-inner">
                                             <div class="project-link-flex">
@@ -217,7 +218,7 @@
                                             <div class="_3d-block">
                                                 <div class="image-animation-trigger _3d-for-image">
                                                     <div class="animation-color-bg is-light-blue-color"></div><img
-                                                        src="{{projectPhoto.url}}"
+                                                        src="{{galleryphoto.url}}"
                                                         loading="lazy" alt="{{ project.projectName }}" sizes="45vw"
                                                         {# srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-1600.jpeg 1600w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213.jpg 1920w" #}
                                                         class="cover-image" />
