--- a/templates/projects/index.twig
+++ b/templates/projects/index.twig
@@ -1,7 +1,7 @@
-{% extends "layout/_projects.twig" %}
+{% extends "layout/main.twig" %}
 {% block content %}
 
-{% set projects = craft.entries.section('projects').all() %}
+
 <body >
         <div class="preloader">
                 <div class="preloader-inner">
@@ -91,45 +91,48 @@
                         <div class="padding-inner">
                             <div class="projects-with-lines">
                                 <div class="projects-cms w-dyn-list">
+                                
                                     <div role="list" class="project-cms-grid w-dyn-items">
-                                    {% for project in projects %}
-                                    {% set projectPhoto = project.coverimage.one() %}
-                                        <div role="listitem" class="project-cms-item w-dyn-item"><a
-                                                href="projects/{{ project.slug }}"
-                                                class="project-link-block w-inline-block">
-                                                <div class="project-link">
-                                                    <div class="project-name-overlap">
-                                                        <p class="project-name">
-                                                    {{ project.projectName }}
-                                                        </p>
-                                                    </div><img
-                                                        src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6256816300672a60b4c5c6e3_blue-arrow-right.svg"
-                                                        loading="lazy" alt="" class="project-icon" />
-                                                    <div class="project-bg-1"></div><img
-                                                        src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
-                                                        loading="lazy" alt="" class="project-icon-for-hover" />
-                                                    <div class="project-bg-2"></div>
-                                                    <div class="project-link-lines">
-                                                        <div class="project-line-1"></div>
-                                                        <div class="project-line-2"></div>
+                                        {%  set  works = craft.entries.section('projects').all() %}
+                                        {% for work in works %}
+                                         {% set galleryphoto = work.coverImage.one() %}
+                                            <div role="listitem" class="project-cms-item w-dyn-item"><a
+                                                    href="{{ work.slug }}"
+                                                    class="project-link-block w-inline-block">
+                                                    <div class="project-link">
+                                                        <div class="project-name-overlap">
+                                                            <p class="project-name">
+                                                        {{ work.projectName }}
+                                                            </p>
+                                                        </div><img
+                                                            src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6256816300672a60b4c5c6e3_blue-arrow-right.svg"
+                                                            loading="lazy" alt="" class="project-icon" />
+                                                        <div class="project-bg-1"></div><img
+                                                            src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
+                                                            loading="lazy" alt="" class="project-icon-for-hover" />
+                                                        <div class="project-bg-2"></div>
+                                                        <div class="project-link-lines">
+                                                            <div class="project-line-1"></div>
+                                                            <div class="project-line-2"></div>
+                                                        </div>
                                                     </div>
-                                                </div>
-                                                <div data-w-id="95166b7e-0066-a9aa-0f1a-c0d6558cca62" style="opacity:0"
-                                                    class="project-gradient-bg"></div>
-                                                <div class="_3d-block">
-                                                    <div class="image-animation-trigger _3d-for-image">
-                                                        <div class="animation-color-bg is-white-color"></div><img
-                                                            src="{{projectPhoto.Url}}"
-                                                            loading="lazy" alt="{{project.projectName}}" sizes="45vw"
-                                                            {# srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-1600.jpeg 1600w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213.jpg 1920w" #}
-                                                            class="cover-image" />
+                                                    <div data-w-id="95166b7e-0066-a9aa-0f1a-c0d6558cca62" style="opacity:0"
+                                                        class="project-gradient-bg"></div>
+                                                    <div class="_3d-block">
+                                                        <div class="image-animation-trigger _3d-for-image">
+                                                            <div class="animation-color-bg is-white-color"></div><img
+                                                                src="{{galleryphoto.url}}"
+                                                                loading="lazy" alt="{{work.projectName}}" sizes="45vw"
+                                                                {# srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-1600.jpeg 1600w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213.jpg 1920w" #}
+                                                                class="cover-image" />
+                                                        </div>
                                                     </div>
-                                                </div>
-                                            </a>
-                                        </div>
-                                    {% endfor %}
+                                                </a>
+                                            </div>
+                                       
                                     
                                     </div>
+                                     {% endfor %}
                                 </div>
                                 <div class="blue-lines---middle">
                                     <div class="blue-line-1"></div>
@@ -209,8 +212,11 @@
                 </section>
             </main>
         </div>
-   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=625295532800cfe2dd8d3dd2" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-      <script src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/js/webflow.097fc263b.js" type="text/javascript"></script>
+   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=625295532800cfe2dd8d3dd2"
+        type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
+    <script src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/js/webflow.097fc263b.js" type="text/javascript"></script
+        type="text/javascript"></script>
     </div>
 </body>
 {% endblock %}
