resolve project page issue

--- a/templates/includes/_projects.twig
+++ b/templates/includes/_projects.twig
@@ -18,7 +18,7 @@
 		<!--::::: ALL CSS FILES :::::::-->
 		<meta content="width=device-width, initial-scale=1" name="viewport"/>
 		<meta content="Webflow" name="generator"/>
-		<link href="{{siteUrl}}style.css" rel="stylesheet" type="text/css"/>
+		<link href="{{siteUrl}}project.css" rel="stylesheet" type="text/css"/>
 		<style>
 			@media(min-width:992px) {
 				html.w-mod-js:not(.w-mod-ix) [data-w-id="25948a56-9020-051b-6f8e-553087890c34"] {
