Create dynamic contact page

--- a/templates/includes/_footer.twig
+++ b/templates/includes/_footer.twig
@@ -30,30 +30,27 @@
                         aria-current="page" class="footer-link w-inline-block w--current">
                         <p class="footer-link-title">Home</p>
                         <div class="footer-link-line"></div>
-                    </a><a href="/solutions-1" class="footer-link w-inline-block">
-                        <p class="footer-link-title">Solutions</p>
+                    </a><a href="/about_us" class="footer-link w-inline-block">
+                        <p class="footer-link-title">About us</p>
                         <div class="footer-link-line"></div>
-                    </a><a href="/services-1" class="footer-link w-inline-block">
+                    </a><a href="/services" class="footer-link w-inline-block">
                         <p class="footer-link-title">Services</p>
                         <div class="footer-link-line"></div>
-                    </a><a href="/projects-1" class="footer-link w-inline-block">
+                    </a><a href="/projects" class="footer-link w-inline-block">
                         <p class="footer-link-title">Projects</p>
                         <div class="footer-link-line"></div>
                     </a>
                     <div class="footer-border-line is-1st"></div>
                 </div>
-                <div data-w-id="d62e26df-37e4-4b14-0317-bb32561c8b7b" class="footer-column-1"><a href="/company-1"
+                <div data-w-id="d62e26df-37e4-4b14-0317-bb32561c8b7b" class="footer-column-1"><a href="/services/steel-fabrication"
                         class="footer-link w-inline-block">
-                        <p class="footer-link-title">Company</p>
+                        <p class="footer-link-title">Steel delivery <br> and installation</p>
                         <div class="footer-link-line"></div>
-                    </a><a href="/testimonials" class="footer-link w-inline-block">
-                        <p class="footer-link-title">Testimonials</p>
+                    </a><a href="/services/steel-delivery-and-installation" class="footer-link w-inline-block">
+                        <p class="footer-link-title">Steel fabrication</p>
                         <div class="footer-link-line"></div>
-                    </a><a href="/gallery" class="footer-link w-inline-block">
-                        <p class="footer-link-title">Gallery</p>
-                        <div class="footer-link-line"></div>
-                    </a><a href="/contact-1" class="footer-link w-inline-block">
-                        <p class="footer-link-title">Contact</p>
+                    </a><a href="/services/services" class="footer-link w-inline-block">
+                        <p class="footer-link-title">Design</p>
                         <div class="footer-link-line"></div>
                     </a>
                     <div class="footer-border-line is-2nd"></div>
