--- a/templates/index.twig
+++ b/templates/index.twig
@@ -360,7 +360,7 @@
             <!--end of projects  section-->
 
             <!-- summary-->
-            <section class="section wf-section">
+            {# <section class="section wf-section">
                 <div class="w-layout-grid grid-2">
                     <div id="w-node-f5cf92aa-2b80-10e1-54ea-7128b6967dba-d68d3dd3" class="content-grid-block-1"><img
                             src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f05e1b9e1160a4478ae6_holiday_village_white_24dp.svg"
@@ -454,7 +454,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> #}
             <!--end of summary section-->
 
             <!--logo section-->
@@ -494,48 +494,7 @@
             </section>
             <!--end of logo section-->
 
-            <section class="section cta-content-1 wf-section">
-                <div class="container is-cta-container">
-                    <div class="w-layout-grid content-grid-4">
-                        <div class="content-padding-2">
-                            <div class="content-flex-1">
-                                <p data-w-id="c4442ee1-5837-2ede-b004-647ecf03e420" class="uppercase-title-border">
-                                    Contact</p>
-                                <h2 data-w-id="c4442ee1-5837-2ede-b004-647ecf03e422" class="heading is-cta-title-1">
-                                    Reach out today and start this amazing journey with us</h2>
-                                <div class="two-buttons-1">
-                                    <div class="button-overlap-6"><a href="/contact"
-                                            class="main-button w-inline-block">
-                                            <div class="button-inner">
-                                                <p class="button-title">Contact</p><img
-                                                    src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
-                                                    loading="lazy" alt="" class="button-icon" />
-                                            </div>
-                                            <div class="button-pattern"></div>
-                                        </a></div><a data-w-id="c4442ee1-5837-2ede-b004-647ecf03e427"
-                                        href="/testimonials" class="second-button w-inline-block">
-                                        <div class="button-inner-2">
-                                            <p class="button-title is-black">Clients say</p>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="w-node-c4442ee1-5837-2ede-b004-647ecf03e42b-cf03e41b"
-                            data-w-id="c4442ee1-5837-2ede-b004-647ecf03e42b" class="height-120-per">
-                            <div class="_3d-block is-visible">
-                                <div class="image-animation-trigger _3d-for-image-visible">
-                                    <div class="animation-color-bg"></div><img
-                                        src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6255b4f7da0cd98b7ff456cd_pexels-max-vakhtbovych-6958122.jpg"
-                                        loading="lazy" alt="Construction and renovation webflow template sample image"
-                                        class="cover-image" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="blue-95-background"></div>
-            </section>
+           
 
             <!--footer section-->
 
