--- a/templates/layout/_projects.twig
+++ b/templates/layout/_projects.twig
@@ -3,6 +3,7 @@
     {% include 'includes/_nav.twig' %}
 
 {% block content %}{% endblock %}
+    {% include 'includes/_cta.twig' %} 
    {% include 'includes/_footer.twig' %}
 
 {% endblock %}
