--- a/templates/layout/contact.twig
+++ b/templates/layout/contact.twig
@@ -1,9 +1,9 @@
 {% block body %}
-    {% include 'includes/_services.twig' %}
+    {% include 'includes/_projects.twig' %}
     {% include 'includes/_nav.twig' %}
 
 {% block content %}{% endblock %}
-    {% include 'includes/_cta.twig' %} 
+    
    {% include 'includes/_footer.twig' %}
 
 {% endblock %}
