--- a/templates/projects/entry.twig
+++ b/templates/projects/entry.twig
@@ -264,42 +264,7 @@
             </section>
            
            <!--////////////////////////////////cta////////////////////////////////-->
-            <section class="section cta-content-1 wf-section">
-                <div class="container is-cta-container">
-                    <div class="w-layout-grid content-grid-4">
-                        <div class="content-grid-4-block">
-                            <p data-w-id="6d675344-39d4-6367-c314-d97b69cc78d2" class="hire-us-text">
-                                Hire us</p>
-                            <h3 data-w-id="6d675344-39d4-6367-c314-d97b69cc78d4" class="heading is-cta-title-1">
-                                Reach out today and start this amazing journey with us
-                            </h3>
-                            <div class="button-overlap-1"><a href="/contact" class="main-button w-inline-block">
-                                    <div class="button-inner">
-                                        <p class="button-title">Inquiry</p><img
-                                            src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
-                                            loading="lazy" alt="" class="button-icon" />
-                                    </div>
-                                    <div class="button-pattern"></div>
-                                </a></div>
-                        </div>
-                        <div id="w-node-_6d675344-39d4-6367-c314-d97b69cc78d8-e3cdb512"
-                            data-w-id="6d675344-39d4-6367-c314-d97b69cc78d8" class="height-120-per">
-                            <div class="_3d-block is-visible">
-                                <div class="image-animation-trigger _3d-for-image-visible">
-                                    <div class="animation-color-bg"></div><img
-                                        src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6255b4f7dc4ef0744322125a_pexels-max-vakhtbovych-8082313.jpg"
-                                        loading="lazy"
-                                        sizes="(max-width: 479px) 84vw, (max-width: 767px) 89vw, (max-width: 991px) 91vw, (max-width: 1439px) 82vw, (max-width: 1919px) 83vw, 1330px"
-                                        srcset="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6255b4f7dc4ef0744322125a_pexels-max-vakhtbovych-8082313-p-500.jpeg 500w, https://assets.website-files.com/625295532800cfe2dd8d3dd2/6255b4f7dc4ef0744322125a_pexels-max-vakhtbovych-8082313-p-800.jpeg 800w, https://assets.website-files.com/625295532800cfe2dd8d3dd2/6255b4f7dc4ef0744322125a_pexels-max-vakhtbovych-8082313-p-1080.jpeg 1080w, https://assets.website-files.com/625295532800cfe2dd8d3dd2/6255b4f7dc4ef0744322125a_pexels-max-vakhtbovych-8082313-p-1600.jpeg 1600w, https://assets.website-files.com/625295532800cfe2dd8d3dd2/6255b4f7dc4ef0744322125a_pexels-max-vakhtbovych-8082313.jpg 1920w"
-                                        alt="Construction and renovation webflow template sample image"
-                                        class="cover-image" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="blue-95-background"></div>
-            </section>
+            <!--////////////////////////////////in the includes ///-->
             <!--cta -->
            
             
